tdf#95188: enable import of shapes in footnotes in .docx

substreams require a Model and a DrawPage

Change-Id: I701cf6e2283f84f18b9a0c06a4ce0aa8be934bf3